--- a/src/main/resources/static/guests.css
+++ b/src/main/resources/static/guests.css
@@ -24,13 +24,22 @@
     overflow: auto;
 }
 
+.score_history_list {
+    list-style: "📌 " inside;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    overflow: auto;
+}
+
 .guests_history_list_item {
     margin-top: auto;
     margin-bottom: 5px;
     max-width: max-content;
     width: 100%;
     border-radius: 15px;
-    padding: 10px 20px;
+    padding: 10px 0px;
 }
 
 .guests_score_item {
