--- a/src/main/resources/static/info.css
+++ b/src/main/resources/static/info.css
@@ -1,7 +1,7 @@
 .packages {
     margin: 0px;
     height: auto;
-    width: 260px;
+    width: 380px;
     font-family: 'Wavehaus', cursive;
     font-weight: 300;
     padding: 1.5em;
@@ -14,6 +14,11 @@
     box-shadow: 0 19px 38px rgb(255 255 255), 0 15px 12px rgb(146 146 146 / 20%);
     flex-wrap: wrap;
     color: #080808;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
 }
 
 .info-list li {
